# WINGS_AI-Assignment1

./: README.md  scala
Haskell/: Create.hs  Register.hs  register.hs  requirements.cabal
Haskell/Gnanika/: Create.hs  Guess.hs  Register.hs  WordleAPI.hs  requirements.cabal
Haskell/Gnanika/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Learning_log/: Gnanika.txt  Keerthana.txt
Python/Gnanika/: wordle.py
Scala/Gnanika/: register.scala  wordleAPI.scala  wordleBot.scala
Scala/Keerthana/: WordleGame.scala  build.sbt
_build/dev/lib/certifi/ebin/: certifi.beam  certifi_pt.beam
_build/dev/lib/hackney/ebin/: hackney.beam  hackney_app.beam  hackney_bstr.beam  hackney_cidr.beam  hackney_connect.beam  hackney_connection.beam  hackney_connections.beam  hackney_cookie.beam  hackney_date.beam  hackney_happy.beam  hackney_headers.beam  hackney_headers_new.beam  hackney_http.beam  hackney_http_connect.beam  hackney_local_tcp.beam  hackney_manager.beam  hackney_metrics.beam  hackney_multipart.beam  hackney_pool.beam  hackney_pool_handler.beam  hackney_request.beam  hackney_response.beam  hackney_socks5.beam  hackney_ssl.beam  hackney_ssl_certificate.beam  hackney_stream.beam  hackney_sup.beam  hackney_tcp.beam  hackney_trace.beam  hackney_url.beam  hackney_util.beam
_build/dev/lib/httpoison/.mix/: compile.app_tracer  compile.elixir
elixir/: mix.exs
elixir/Gnanika/: mix.exs
elixir/lib/: guess.ex  register.ex  wordle_client.ex
test/: wordle_client_test.exs
(+79 files in other folders)
