cabal-version:       >=1.10
name:                requirements
version:             0.1.0.0
build-type:          Simple

executable requirements
  main-is:             WordleAPI.hs
  hs-source-dirs:      .
  other-modules:       Register, Create, Guess
  default-language:    Haskell2010
  build-depends:       
    base >=4.7 && <5,
    wreq,
    lens,
    lens-aeson,
    text,
    aeson,
    bytestring,
    http-client,
    data-default,
    exceptions